# cmeel-gettext

./: .cirrus.yml  CMakeLists.txt  pyproject.toml
.github/workflows/: release.yml
